# bolojax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
config/: example.yaml  myExample.yaml
config/Pdf/: elevation_pole.txt  pwv_pole.txt
docs/: atmosphere.md  beam_correlation.md  conf.py  index.md
nb/: bolo_example.ipynb  tables_example.ipynb
notebooks/: quickstart.ipynb
python/bolo/: channel.py  sensitivity.py  sky.py
scripts/: update_atm.py
src/bolojax/: __init__.py  _version.py  camera.py  cfg.py  channel.py  cli.py  compute.py  data_utils.py  instrument.py  interp.py  noise.py  optics.py  pdf.py  physics.py  readout.py  sensitivity.py  sky.py  top.py  unit.py  utils.py
src/bolojax/PKL/: coherentApertCorr.pkl  incoherentApertCorr.pkl
src/bolojax/compute/: __init__.py  beam_correlation.py  elements.py  experiment.py  noise.py  physics.py  sensitivity.py
src/bolojax/compute/PKL/: coherentStopCorr.pkl  incoherentStopCorr.pkl
src/bolojax/compute/data/: stop_corr.npy
src/bolojax/io/: __init__.py  sensitivity.py  tables.py
src/bolojax/models/: __init__.py  base.py  camera.py  channel.py  experiment.py  instrument.py  interp.py  optics.py  params.py  pdf.py  readout.py  sky.py  top.py  unit.py  utils.py
tests/: test_bolo.py  test_params.py  test_regression.py
tests/fixtures/: comprehensive.yaml  example.yaml  reference.json
